feat(be): add date filtering to GetListPayments and update related components
